[gd_scene load_steps=2 format=2]

[ext_resource path="res://weapons/ranged/RangedWeapon.gd" type="Script" id=1]

[node name="RangedWeapon" type="Node2D"]
script = ExtResource( 1 )

[node name="ColdTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ColdTimer" to="." method="_on_ColdTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
